Fix small images stretched and images lacking margin

--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -120,8 +120,8 @@
     list-style: square;
   }
   & img {
-    width: min(80%, 700px);
-    margin: 1rem 10% 0;
+    max-width: min(80%, 700px);
+    margin: 0 10%;
     background: var(--bgLight);
     border-radius: 10px;
   }
@@ -180,11 +180,16 @@
 
 /* Workaround to use "* (em) tags" in markdown to create image captions */
 .markdown img + em {
-  margin-bottom: 1rem;
+  margin-top: 0.5rem;
   font-size: 0.9rem;
   font-style: italic;
   text-align: center;
   display: block;
+  font-weight: 400;
+}
+
+.markdown p:has(img) {
+  margin: 2rem 0;
 }
 
 @media (max-width: 1280px) {
